# seccamcloud

./: ARCHITECTURE.md  BUILD.md  COMPLETE_STRUCTURE.md  Cargo.toml  FILE_HEADERS_VERIFICATION.md  README.md  README_VIDREC_DELIVERY.md  README_YOUTUBE_DELIVERY.md  REFACTORING_SUMMARY.md  SCREENSHOTS.md  VERSION_UPDATES.md  VIDEO_RECORDING.md  VIDREC_INTEGRATION.md  VIDREC_SUMMARY.md  YOUTUBE_INTEGRATION.md  YOUTUBE_UPLOAD.md  run.bat
examples/: test_examples.rs
src/: automation.rs  config.rs  lib.rs  main.rs  screenshot.rs  telemetry.rs  vidrec.rs  watchdog.rs
