[package]
name = "seccamcloud"
version = "1.0.0"
edition = "2024"
rust-version = "1.91.0"
description = "Advanced automation tool with GUI, telemetry, and screenshot capture"
license = "GPL-2.0"

[dependencies]
# GUI Framework - Latest versions (November 2024)
eframe = "0.33"
egui = "0.33"

# Automation - Latest version with Rust 2024 support
enigo = "0.7"

# Date/Time
chrono = "0.4"

# Logging
log = "0.4"
simplelog = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.6"

# CLI Arguments
clap = { version = "4.5", features = ["derive"] }

# Utilities
lazy_static = "1.5"

# Screenshot capture (optional feature)
scrap = { version = "0.5", optional = true }
image = { version = "0.25", optional = true }
captrs = { version = "0.3", optional = true }

# Video recording (optional feature)
opencv = { version = "0.92", optional = true, default-features = false, features = ["videoio", "highgui", "imgcodecs"] }

# YouTube upload (optional feature)
reqwest = { version = "0.12", optional = true, features = ["blocking", "json", "multipart"] }


[target.'cfg(windows)'.dependencies]
# Windows API - Latest version (November 2024)
windows = { version = "0.62", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
] }

[features]
default = []
screenshots = ["scrap", "image", "captrs"]
video = ["opencv"]
youtube = ["reqwest", "video"]  # YouTube requires video feature for validation

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "seccamcloud"
path = "src/main.rs"

[lib]
name = "seccamcloud"
path = "src/lib.rs"
